envoy.yaml
static_resources:
  listeners:
  - name: "listener_0"
    address:
      socket_address: { protocol: "TCP", address: "0.0.0.0", port_value: 5010 }

    filter_chains:
    - filters:
      - name: "envoy.http_connection_manager"
        config:
          stat_prefix: "ingress_http"
          route_config:
            name: "local_route"
            virtual_hosts:
            - name: "local_service"
              domains: ["*"]
              routes:
              - match: { prefix: "/api/echo" }
                route: { cluster: "flask" }
          access_log:
          - name: envoy.file_access_log
            config:
              path: /tmp/stdout                
          http_filters:
          - name: "envoy.router"

  clusters:
  - name: "flask"
    connect_timeout: "0.25s"
    type: "STATIC" 
    dns_lookup_family: "V4_ONLY"
    lb_policy: "ROUND_ROBIN"
    hosts: [{ socket_address: { address: "172.17.0.3", port_value: 5000 }}]

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address: { address: "0.0.0.0", port_value: 9901 }
